add print styles, cleaned up html

--- a/about.html
+++ b/about.html
@@ -1,51 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>Khalila Hughes- Creative Professional</title>
 
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
- 
-	<title>Khalila Hughes: About Me</title>
+  	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
+ 	<meta name "author" content="Khalila Hughes">
+ 	<meta name="keywords" content="Khalila, Hughes, design, creative, professional, 
+		content, information design">
+	
 	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900|Karla:400,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
-
-  	<link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
-  	<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
-  	<link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
-
+	<link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
+ 	<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
+	<link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
 </head>
 
+
 <body>
+
 <div id="page">
 
-	<div id="topblock"> 		<!-- bar at top of page -->
+	<div id="topblock">
 		<p> &nbsp;</p>
 	</div> 		<!-- end topblock--> 
 
 	<div id="header">
-		<a href="index.html"> <img src="media/img/kh-logolong.png" alt="Khalila Hughes"/>  </a> 
-
+		<a href="index.html"> <img src="media/img/kh-logolong.png" alt="Khalila Hughes" /> </a>
+	
 	<ul id="navigation">
 		<li class="home"><a href="index.html">Home</a></li>
 		<li class="about"><a href="about.html">About</a></li>
 		<li class="work"><a href="work.html">Work</a></li>
 		<li	class="connect"><a href="connect.html">Connect</a></li>
-	</ul>	<!--end navigation-->
-	
-	</div>	<!--end header-->
+	</ul>		<!--end navigation-->
 
+	</div>		<!--end header-->
 
 	<div id="wrapper">
 
-	<div id="big-blurb">
+		<div id="big-blurb">
 			<h1> Creative Professional <span class="highlight-purple">Extraordinaire</span></h1>
 		</div> 		<!--end big-blurb-->
 
 	<div id="content-body"> 
-
 		
 	<div id="content">
-	<h3> Me in 187 words </h3>
-    	<p> I am a Los Angeles native, current Chicago resident (okay, the suburbs, but it still counts!) pursuing a Master's in Technical 
+		<h3> Me in 187 words </h3>
+    		<p> I am a Los Angeles native, current Chicago resident (okay, the suburbs, but it still counts!) pursuing a Master's in Technical 
 				Communication and Information Design at Illinois Institute of Technology. </p>
 		<p>I strongly believe that all forms of information should be accessible and easy to digest, no matter what the format. I apply
 				this philosophy to everything I do. <span class="highlight-blue">Creative problem-solving is one of my strengths</span>, 
@@ -57,27 +58,26 @@
 				phone taking photos. </p>
 		<p>I've been told that I'm also observant, thorough, creative, adaptable, and a team player. But I prefer thinking of myself as creative professional
 			extraordinaire. </p>
+		
 		<div id ="go-resume">
 			<h2><a href="resume.html">R&eacute;sum&eacute;</a></h2>
 		</div>
 	</div>  		<!--end content-->		
 
-  </div>  		<!--end content-body-->
-</div>  		<!--end wrapper-->
+	</div> 		<!--end content-body-->
+  </div>  		<!--end wrapper-->
 
 <div id ="footer" >
-	<div id ="contact">
-<h3>Contact Me</h3>
-	<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
-	<a href="mailto:khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
-	<p><a href="mailto:khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>
-		
-	<div id="commons">
-		<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0">Creative Commons</a></p>
-	</div>	<!--end commons-->
-</div> <!--- end contact--->
-
-</div> 		<!--end footer-->
+		<div id ="contact">
+			<h3>Contact Me</h3>
+				<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
+				<a href="mailto:khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+				<p><a href="mailto:khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>	
+			<div id="commons">
+				<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+			</div>	<!--end commons-->
+		</div> 	<!--- end contact--->
+	</div> 		<!--end footer-->
 
 </div> 		<!--end page-->
 
