--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>Khalila Hughes- Creative Professional</title>
 
   	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
- <title>Khalila Hughes</title>
- 
-<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900|Cabin:400,500,600,700|Karla:400,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
-  <link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
-
+ 	<meta name "author" content="Khalila Hughes">
+ 	<meta name="keywords" content="Khalila, Hughes, design, creative, professional, 
+		content, information design">
+	
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900|Karla:400,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
+ 	<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
+	<link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
 </head>
 
 
@@ -42,50 +44,46 @@
 	<div id="content-body">
 
 		<div id="home-about">
-			<p> Hi, my name is Khalila. 
-			 I am a designer, editor, and writer based out of the biggest city in the Midwest. </p>
+			<p> Hi, my name is Khalila.  I am a designer, editor, and writer based out of the biggest city in the Midwest. </p>
 			<p> View my <a href="work.html">work</a>, read more <a href="about.html"> about</a> me
-		(<a href="resume.html">resume </a> included) or send me a message through 
+				(<a href="resume.html">resume </a> included) or send me a message through 
 			my <a href="contact.html">contact</a> page.</p>
 		</div> <!-- home-about -->
 	
-
 		<div id="short-print">
-    		<h2><a href="print.html">Print</a></h2>
-		   <ul> 
-			<li class="opi"> <img src="media/img/portfolio-snapshots/opibrochure-interior.jpg" alt="OPI Brochure Interior"  class="wide-img"/> </li>
-   			<li class="invite"> <img src="media/img/portfolio-snapshots/2009wbinvite.jpeg"   alt="Winter Brunch Invitation" class="wide-img"/> </li>
-   			<li class="invite"> <img src="media/img/portfolio-snapshots/timeeffortreporting-001.jpg"    alt="Time Effort Reporting Manual"/></li>
-		</ul>
+    			<h2><a href="print.html">Print</a></h2>
+		  	<ul> 
+				<li class="opi"> <img src="media/img/portfolio-snapshots/opibrochure-interior.jpg" alt="OPI Brochure Interior"  class="wide-img"/> </li>
+   				<li class="invite"> <img src="media/img/portfolio-snapshots/2009wbinvite.jpeg"   alt="Winter Brunch Invitation" class="wide-img"/> </li>
+   				<li class="invite"> <img src="media/img/portfolio-snapshots/timeeffortreporting-001.jpg"    alt="Time Effort Reporting Manual"/></li>
+			</ul>
 		</div> <!--end short-print-->
 
 		<div id="short-digital">
-      		<h2><a href="digital.html">Digital</a></h2>
-	    	<ul>
-        		<li class="tall"> <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" class="tall-img" /> </li>
-	 		<li class="wide"><img src="media/img/portfolio-snapshots/june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /> </li>
-			<li class="wide"><img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" class="wide-img"/> </li>
-		</ul>
-  		</div> <!--end short-digital-->
-	
-</div> <!--end content-body-->
-  </div>  		<!--end wrapper-->
+      			<h2><a href="digital.html">Digital</a></h2>
+	    		<ul>
+        			<li class="tall"> <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" class="tall-img" /> </li>
+	 			<li class="wide"><img src="media/img/portfolio-snapshots/june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /> </li>
+				<li class="wide"><img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" class="wide-img"/> </li>
+			</ul>
+  		</div> 		<!--end short-digital-->
+	</div> 		<!--end content-body-->
+  	</div>  		<!--end wrapper-->
 
   
 	<div id ="footer" >
-	<div id ="contact">
-		<h3>Contact Me</h3>
-	<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
-	<a href="mailto:khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
-	<p><a href="mailto:khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>	
-	<div id="commons">
-		<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
-	</div>	<!--end commons-->
-</div> <!--- end contact--->
+		<div id ="contact">
+			<h3>Contact Me</h3>
+				<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
+				<a href="mailto:khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+				<p><a href="mailto:khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>	
+			<div id="commons">
+				<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+			</div>	<!--end commons-->
+		</div> 	<!--- end contact--->
+	</div> 		<!--end footer-->
 
-</div> 		<!--end footer-->
-
-</div> <!--end page-->
+</div> 	<!--end page-->
 
 </body>
 
