--- a/digital.html
+++ b/digital.html
@@ -1,70 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>Khalila Hughes- Creative Professional</title>
 
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
- 
-	<title>Khalila Hughes: About Me</title>
-	<link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,500|Nunito:700|Signika|Varela' rel='stylesheet' type='text/css'>
-  	<link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
-  	<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
-  	<link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
-
+  	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
+ 	<meta name "author" content="Khalila Hughes">
+ 	<meta name="keywords" content="Khalila, Hughes, design, creative, professional, 
+		content, information design">
+	
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900|Karla:400,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
+ 	<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
+	<link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
 </head>
 
+
 <body>
+
 <div id="page">
 
-	<div id="topblock"> 		<!-- bar at top of page -->
+	<div id="topblock">
 		<p> &nbsp;</p>
 	</div> 		<!-- end topblock--> 
 
 	<div id="header">
 		<a href="index.html"> <img src="media/img/kh-logolong.png" alt="Khalila Hughes" /> </a>
-
+	
 	<ul id="navigation">
 		<li class="home"><a href="index.html">Home</a></li>
 		<li class="about"><a href="about.html">About</a></li>
 		<li class="work"><a href="work.html">Work</a></li>
 		<li	class="connect"><a href="connect.html">Connect</a></li>
-	</ul>	<!--end navigation-->
-		</div>		<!--end header-->
+	</ul>		<!--end navigation-->
 
-<div id ="wrapper">
+	</div>		<!--end header-->
+  <div id ="wrapper">
 
 		<div id="big-blurb">
 			<h1> Digital <span class="highlight-green">Gallery </span></h1>
 		</div> 		<!--end big-blurb-->
-	<div id="content-body"> 
+	    
+        <div id="content-body"> 
 
-	<div id="digital-gallery">
-   <ul>
-      <li><img src="media/img/portfolio-snapshots/2010holidaycard.jpg"  alt="Holiday Card" /> </li>
-      <li><img src="media/img/portfolio-snapshots/2009holidaypartyinvite.png"   alt="Holiday Party Invitation" /> </li>
-      <li> <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" /></li>
-      <li> <img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" /> </li>
-      <li><img src="media/img/portfolio-snapshots/celebrating25yrs.jpg"   alt="Celebrating 25 years logo" /> </li>
-      <li><img src="media/img/portfolio-snapshots/june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /> </li>
-  </ul>
-	</div>  		<!--end digital-gallery-->		
+	        <div id="digital-gallery">
+              <ul>
+               <li><img src="media/img/portfolio-snapshots/2010holidaycard.jpg"  alt="Holiday Card" /> </li>
+                <li><img src="media/img/portfolio-snapshots/2009holidaypartyinvite.png"   alt="Holiday Party Invitation" /> </li>
+                <li> <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" /></li>
+                <li> <img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" /> </li>
+                <li><img src="media/img/portfolio-snapshots/celebrating25yrs.jpg"   alt="Celebrating 25 years logo" /> </li>
+                <li><img src="media/img/portfolio-snapshots/june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /> </li>
+              </ul>
+	        </div>  		<!--end digital-gallery-->		
 
-  	</div>  		<!--end content-body-->
-</div>  <!-- end wrapper -->
+  	    </div>  		<!--end content-body-->
+  </div>  <!-- end wrapper -->
 
-	<div id ="footer" >
-	<div id ="contact">
-      <h3>Contact Me</h3>
-	  <a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
-	 <a href="mailto:khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
-	<p><a href="mailto:khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>
-	<div id="commons">
-		<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
-	</div>	<!--end commons-->
-</div> <!--- end contact--->
+<div id ="footer" >
+		<div id ="contact">
+			<h3>Contact Me</h3>
+				<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
+				<a href="mailto:khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+				<p><a href="mailto:khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>	
+			<div id="commons">
+				<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+			</div>	<!--end commons-->
+		</div> 	<!--- end contact--->
+	</div> 		<!--end footer-->
 
-</div> 		<!--end footer-->
-
+</div> 	<!--end page-->
 </body>
 
 </html>
