added links between digital and print pages

--- a/digital.html
+++ b/digital.html
@@ -52,7 +52,10 @@
                 <li><img src="media/img/portfolio-snapshots/celebrating25yrs.jpg"   alt="Celebrating 25 years logo" /> </li>
                 <li><img src="media/img/portfolio-snapshots/june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /> </li>
               </ul>
-	        </div>  		<!--end digital-gallery-->		
+                
+          <div id="print-digital">
+            <h2 class="print"><a href="print.html">View Print Gallery</a></h2>
+          </div>  		<!--end digital-gallery-->		
 
   	    </div>  		<!--end content-body-->
   </div>  <!-- end wrapper -->
