--- a/print.html
+++ b/print.html
@@ -55,6 +55,11 @@
             <li> <img src="media/img/portfolio-snapshots/opibrochure-interior.jpg" alt="OPI Brochure Interior"/></li>
             <li> <img src="media/img/portfolio-snapshots/opibrochure-exterior.jpg"   alt="OPI Brochure Exterior"/></li>   
          </ul>
+ 
+      <div id="print-digital">
+          <h2 class="digital"><a href="digital.html">View Digital Gallery</a></h2>
+      </div>    <!--print-digital"-->
+
 	</div>  		<!--end print-gallery-->		
 
   	</div>  		<!--end content-body-->
