--- a/digital.html
+++ b/digital.html
@@ -5,7 +5,7 @@
 
   	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
- 	<meta name "author" content="Khalila Hughes">
+ 	<meta name="author" content="Khalila Hughes">
  	<meta name="keywords" content="Khalila, Hughes, design, creative, professional, 
 		content, information design">
 	
@@ -14,7 +14,6 @@
  	<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
 	<link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
 </head>
-
 
 <body>
 
@@ -35,6 +34,7 @@
 	</ul>		<!--end navigation-->
 
 	</div>		<!--end header-->
+
   <div id ="wrapper">
 
 		<div id="big-blurb">
@@ -55,6 +55,7 @@
                 
           <div id="print-digital">
             <h2 class="print"><a href="print.html">View Print Gallery</a></h2>
+          </div>      <!-- end print-digital -->
           </div>  		<!--end digital-gallery-->		
 
   	    </div>  		<!--end content-body-->
@@ -63,13 +64,13 @@
 <div id ="footer" >
 		<div id ="contact">
 			<h3>Contact Me</h3>
-				<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
-				<a href="mailto:khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+				<a href="www.linkedin.com/in/khalilahughes"> <img src="media/img/linkedin.png" alt="Linked In" /></a> 
+				<a href="mailto:khalilahughes+web@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
 				<p><a href="mailto:khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>	
 			<div id="commons">
-				<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+				<p>Licensed under <a href="www.creativecommons.org/licenses/by-nc/2.0">Creative Commons</a></p>
 			</div>	<!--end commons-->
-		</div> 	<!--- end contact--->
+		</div> 	<!--- end contact-->
 	</div> 		<!--end footer-->
 
 </div> 	<!--end page-->
