--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
 
   	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
- 	<meta name "author" content="Khalila Hughes">
+ 	<meta name="author" content="Khalila Hughes">
  	<meta name="keywords" content="Khalila, Hughes, design, creative, professional, 
 		content, information design">
 	
@@ -14,6 +14,7 @@
  	<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
 	<link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
 </head>
+
 
 <body>
 
@@ -47,11 +48,11 @@
           <p>Here is a sampling of the types of projects I've done: </p>
   
           <ul>
-            <li>Holiday Cards <span class="digital"> digital </span></li>
-            <li>Invitations <span class="print">print</span><span class="digital">digital</span></li>
-            <li>Business <span class="print">print</span><span class="digital">digital</span></li>
-            <li>Manuals <span class="print">print</span></li>
-            <li>Graphics <span class="print">print</span><span class="digital">digital</span></li>
+            <li>Holiday Cards <span class="digital"><a href="digital.html"> digital </a></span></li>
+            <li>Invitations <span class="print"><a href="print.html">print</a></span><span class="digital"><a href="digital.html">digital</a></span></li>
+            <li>Business <span class="print"><a href="print.html">print</a></span><span class="digital"><a href="digital.html">digital</a></span></li>
+            <li>Manuals <span class="print"><a href="print.html">print</a></span></li>
+            <li>Graphics <span class="print"><a href="print.html">print</a></span><span class="digital"><a href="digital.html">digital</a></span></li>
           </ul>
         
           <p>Check out some of my work.</p>
@@ -65,18 +66,17 @@
   	  </div>  		<!--end wrapper-->
 
 
-  <div id ="footer" >
+ <div id ="footer" >
 		<div id ="contact">
 			<h3>Contact Me</h3>
-				<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
-				<a href="mailto:khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+				<a href="www.linkedin.com/in/khalilahughes"> <img src="media/img/linkedin.png" alt="Linked In" /></a> 
+				<a href="mailto:khalilahughes+web@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
 				<p><a href="mailto:khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>	
 			<div id="commons">
-				<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+				<p>Licensed under <a href="www.creativecommons.org/licenses/by-nc/2.0">Creative Commons</a></p>
 			</div>	<!--end commons-->
-		</div> 	<!--- end contact--->
+		</div> 	<!--- end contact-->
 	</div> 		<!--end footer-->
-
 </div> <!--end page-->
 
 </body>
