--- a/connect.html
+++ b/connect.html
@@ -5,7 +5,7 @@
 
   	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
- 	<meta name "author" content="Khalila Hughes">
+ 	<meta name="author" content="Khalila Hughes">
  	<meta name="keywords" content="Khalila, Hughes, design, creative, professional, 
 		content, information design">
 	
@@ -48,14 +48,14 @@
           <form action="#" method="post">
           <fieldset>
 
-            <label for ="name">Name</label>
+            <label for="name">Name</label>
             <input type="text" id="name" placeholder="Your name" />
         
             <label for="email">Email</label>
            <input type="email" id="email" placeholder="Your email address" />
 
-            <label for "message">Message</label>
-            <textarea id="message" placeholder="Your message" /></textarea>
+            <label for= "message">Message</label>
+            <textarea id="message" placeholder="Your message"></textarea>
       
             <input type="submit" value="Send Message" />
 
@@ -69,14 +69,15 @@
 <div id ="footer" >
 		<div id ="contact">
 			<h3>Contact Me</h3>
-				<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
-				<a href="mailto:khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+				<a href="www.linkedin.com/in/khalilahughes"> <img src="media/img/linkedin.png" alt="Linked In" /></a> 
+				<a href="mailto:khalilahughes+web@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
 				<p><a href="mailto:khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>	
 			<div id="commons">
-				<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+				<p>Licensed under <a href="www.creativecommons.org/licenses/by-nc/2.0">Creative Commons</a></p>
 			</div>	<!--end commons-->
-		</div> 	<!--- end contact--->
+		</div> 	<!--- end contact-->
 	</div> 		<!--end footer-->
+
 
 </div> <!--end page-->
 
