added thumbnails to pages

--- a/digital.html
+++ b/digital.html
@@ -45,12 +45,12 @@
 
 	        <div id="digital-gallery">
               <ul>
-               <li><img src="media/img/portfolio-snapshots/2010holidaycard.jpg"  alt="Holiday Card" /> </li>
-                <li><img src="media/img/portfolio-snapshots/2009holidaypartyinvite.png"   alt="Holiday Party Invitation" /> </li>
-                <li> <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" /></li>
-                <li> <img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" /> </li>
-                <li><img src="media/img/portfolio-snapshots/celebrating25yrs.jpg"   alt="Celebrating 25 years logo" /> </li>
-                <li><img src="media/img/portfolio-snapshots/june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /> </li>
+               <li><img src="media/img/portfolio-snapshots/tn-2010holidaycard.jpg"  alt="Holiday Card" /> </li>
+                <li><img src="media/img/portfolio-snapshots/tn-2009holidaypartyinvite.png"   alt="Holiday Party Invitation" /> </li>
+                <li> <img src="media/img/portfolio-snapshots/tn-2011holidaycard.png"  alt="Holiday Card" /></li>
+                <li> <img src="media/img/portfolio-snapshots/tn-2012holidaycard.jpg"    alt="Holiday Card" /> </li>
+                <li><img src="media/img/portfolio-snapshots/tn-celebrating25yrs.jpg"   alt="Celebrating 25 years logo" /> </li>
+                <li><img src="media/img/portfolio-snapshots/tn-june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /> </li>
               </ul>
                 
           <div id="print-digital">
