--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
 		<div id="short-print">
     			<h2><a href="print.html">Print</a></h2>
 		  	<ul> 
-				<li class="opi"> <img src="media/img/portfolio-snapshots/opibrochure-interior.jpg" alt="OPI Brochure Interior"  class="wide-img"/> </li>
-   				<li class="invite"> <img src="media/img/portfolio-snapshots/2009wbinvite.jpeg"   alt="Winter Brunch Invitation" class="wide-img"/> </li>
-   				<li class="invite"> <img src="media/img/portfolio-snapshots/timeeffortreporting-001.jpg"    alt="Time Effort Reporting Manual"/></li>
+				<li> <img src="media/img/portfolio-snapshots/tn-opibrochure-interior.jpg" alt="OPI Brochure Interior" /> </li>
+   				<li> <img src="media/img/portfolio-snapshots/tn-2009wbinvite.png"   alt="Winter Brunch Invitation"/> </li>
+   				<li> <img src="media/img/portfolio-snapshots/tn-reportingmanual.jpg"    alt="Time Effort Reporting Manual"/></li>
 			</ul>
 		</div> <!--end short-print-->
 
 		<div id="short-digital">
       			<h2><a href="digital.html">Digital</a></h2>
 	    		<ul>
-        			<li class="tall"> <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" class="tall-img" /> </li>
-	 			<li class="wide"><img src="media/img/portfolio-snapshots/june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /> </li>
-				<li class="wide"><img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" class="wide-img"/> </li>
+        			<li> <img src="media/img/portfolio-snapshots/tn-2011holidaycard.png"  alt="Holiday Card" /> </li>
+	 			<li><img src="media/img/portfolio-snapshots/tn-june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /> </li>
+				<li><img src="media/img/portfolio-snapshots/tn-2012holidaycard.jpg"    alt="Holiday Card" class="wide-img"/> </li>
 			</ul>
   		</div> 		<!--end short-digital-->
 	</div> 		<!--end content-body-->
