--- a/connect.html
+++ b/connect.html
@@ -43,7 +43,7 @@
 
     <div id="content-body"> 
       <div id="content">
-        <h3> Send an Email </h3>
+        <h3> Connect with Me </h3>
 
           <form action="#" method="post">
           <fieldset>
