--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	<link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
  	<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
 	<link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
-	
-	<script type="text/javascript" src="script.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" media="screen" href="css/colorbox.css" />
 
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+	<script src="js/jquery/colorbox/jquery.colorbox.js"></script>
 </head>
 
 
@@ -56,19 +56,30 @@
 	
 		<div id="short-print">
     			<h2><a href="print.html">Print</a></h2>
-		  	<ul> 
-				<li> <img src="media/img/portfolio-snapshots/tn-opibrochure-interior.jpg" alt="OPI Brochure Interior" /> </li>
-   				<li> <img src="media/img/portfolio-snapshots/tn-2009wbinvite.png"   alt="Winter Brunch Invitation"/> </li>
-   				<li> <img src="media/img/portfolio-snapshots/tn-reportingmanual.jpg"    alt="Time Effort Reporting Manual"/></li>
+	
+			<ul> 
+				<li> <a class="gallery" href="media/img/portfolio-snapshots/opi-brochure-interior.jpg" title="OPI Brochure Interior">
+						<img src="media/img/portfolio-snapshots/tn-opibrochure-interior.jpg" alt="OPI Brochure Interior" /></a> </li>   				
+				<li> <a class="gallery" href="media/img/portfolio-snapshots/tn-2009wbinvite.png" title= "2009 Winter Brunch Invitation">
+						<img src="media/img/portfolio-snapshots/tn-2009wbinvite.png"   alt="Winter Brunch Invitation"/> </a> </li>
+   				<li> <a class="gallery" href="media/img/portfolio-snapshots/reportingmanual.jpg"    title="Time Effort Reporting Manual">
+						<img src="media/img/portfolio-snapshots/tn-reportingmanual.jpg"    alt="Time Effort Reporting Manual"/> </a> </li>
 			</ul>
+
+				<ul>
+					
+</ul>
 		</div> <!--end short-print-->
 
 		<div id="short-digital">
       			<h2><a href="digital.html">Digital</a></h2>
-	    		<ul>
-        			<li> <img src="media/img/portfolio-snapshots/tn-2011holidaycard.png"  alt="Holiday Card" /> </li>
-	 			<li><img src="media/img/portfolio-snapshots/tn-june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /> </li>
-				<li><img src="media/img/portfolio-snapshots/tn-2012holidaycard.jpg"    alt="Holiday Card" class="wide-img"/> </li>
+	    		<ul class="gallery">
+        			<li> <a class="gallery" href="media/img/portfolio-snapshots/2011holidaycard.png"  title="Holiday Card"> 
+					<img src="media/img/portfolio-snapshots/tn-2011holidaycard.png"  alt="Holiday Card" /> </a></li>
+	 			<li> <a class="gallery" href="media/img/portfolio-snapshots/tn-june242012ward44.jpg"   title="June 24, 2012 Project">
+					<img src="media/img/portfolio-snapshots/tn-june242012ward44.jpg"   alt="June 24, 2012" /> </a> </li>
+				<li> <a class="gallery" href="media/img/portfolio-snapshots/2012holidaycard.jpg"    title="Holiday Card 2012" class="wide-img">
+					<img src="media/img/portfolio-snapshots/tn-2012holidaycard.jpg"    alt="Holiday Card" class="wide-img"/> </li>
 			</ul>
   		</div> 		<!--end short-digital-->
 	</div> 		<!--end content-body-->
@@ -87,7 +98,9 @@
 		</div> 	<!--- end contact-->
 	</div> 		<!--end footer-->
 </div> 	<!--end page-->
-
+<script>
+	jQuery('a.gallery').colorbox();
+</script>
 </body>
 
 </html>
