colorbox tweaks and groups images

--- a/digital.html
+++ b/digital.html
@@ -51,17 +51,17 @@
 
 	        <div id="digital-gallery">
               <ul>
-               <li><a class="gallery" href="media/img/portfolio-snapshots/2010holidaycard.jpg"  title="Holiday Card" >
+               <li><a class="gallery digital-group" href="media/img/portfolio-snapshots/2010holidaycard.jpg"  title="2010 Holiday Card" >
                     <img src="media/img/portfolio-snapshots/tn-2010holidaycard.jpg"  alt="Holiday Card" /></a> </li>
-                <li><a class="gallery" href="media/img/portfolio-snapshots/2009holidaypartyinvite.png"   title="Holiday Party Invitation" >
+                <li><a class="gallery digital-group" href="media/img/portfolio-snapshots/2009holidaypartyinvite.png"   title="Holiday Party Invitation" >
                     <img src="media/img/portfolio-snapshots/tn-2009holidaypartyinvite.png"   alt="Holiday Party Invitation" /> </a></li>
-                <li> <a class="gallery" href= "media/img/portfolio-snapshots/2011holidaycard.jpg"  title="Holiday Card" >
+                <li> <a class="gallery digital-group" href= "media/img/portfolio-snapshots/2011holidaycard.jpg"  title="Holiday Card" >
                     <img src="media/img/portfolio-snapshots/tn-2011holidaycard.png"  alt="Holiday Card" /></a></li>
-                <li> <a class="gallery" href= "media/img/portfolio-snapshots/2012holidaycard.jpg"    title="Holiday Card" > 
+                <li> <a class="gallery digital-group" href= "media/img/portfolio-snapshots/2012holidaycard.jpg"    title="Holiday Card" > 
                     <img src="media/img/portfolio-snapshots/tn-2012holidaycard.jpg"    alt="Holiday Card" /></a> </li>
-                <li><a class="gallery" href= "media/img/portfolio-snapshots/celebrating25yrs.jpg"   title="Celebrating 25 years logo">
+                <li><a class="gallery digital-group" href= "media/img/portfolio-snapshots/celebrating25yrs.jpg"   title="Celebrating 25 years logo">
                     <img src="media/img/portfolio-snapshots/tn-celebrating25yrs.jpg"   alt="Celebrating 25 years logo" /> </a></li>
-                <li><a class="gallery" href="media/img/portfolio-snapshots/june242012ward44.jpg"   title="June 24, 2012 Project">
+                <li><a class="gallery digital-group" href="media/img/portfolio-snapshots/june242012ward44.jpg"   title="June 24, 2012 Project">
                     <img src="media/img/portfolio-snapshots/tn-june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /></a> </li>
               </ul>
                 
@@ -88,6 +88,7 @@
 </div> 	<!--end page-->
 <script>
 	jQuery('a.gallery').colorbox();
+    $(".digital-group").colorbox({rel:"digital-group"});
 </script>
 
 
