started to add captions to images

--- a/index.html
+++ b/index.html
@@ -58,12 +58,15 @@
     			<h2><a href="print.html">Print</a></h2>
 	
 			<ul> 
-				<li> <a class="gallery" href="media/img/portfolio-snapshots/opi-brochure-interior.jpg" title="OPI Brochure Interior">
-						<img src="media/img/portfolio-snapshots/tn-opibrochure-interior.jpg" alt="OPI Brochure Interior" /></a> </li>   				
+				<li> <a class="gallery" href="media/img/portfolio-snapshots/opi-brochure-interior.jpg" title="OPI Brochure- Interior">
+						<img src="media/img/portfolio-snapshots/tn-opibrochure-interior.jpg" alt="OPI Brochure Interior" />
+						<span class="caption">OPI Brochure- Interior</span> </a> </li>   				
 				<li> <a class="gallery" href="media/img/portfolio-snapshots/tn-2009wbinvite.png" title= "2009 Winter Brunch Invitation">
-						<img src="media/img/portfolio-snapshots/tn-2009wbinvite.png"   alt="Winter Brunch Invitation"/> </a> </li>
+						<img src="media/img/portfolio-snapshots/tn-2009wbinvite.png"   alt="Winter Brunch Invitation"/> 
+						<span class="caption">2009 Winter Brunch Invitation</span> </a> </li>
    				<li> <a class="gallery" href="media/img/portfolio-snapshots/reportingmanual.jpg"    title="Time Effort Reporting Manual">
-						<img src="media/img/portfolio-snapshots/tn-reportingmanual.jpg"    alt="Time Effort Reporting Manual"/> </a> </li>
+						<img src="media/img/portfolio-snapshots/tn-reportingmanual.jpg"    alt="Time Effort Reporting Manual"/>
+					<span class="caption">Time Effort Reporting Manual</span> </a> </li>
 			</ul>
 
 				<ul>
