--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 				<li> <a class="gallery" href="media/img/portfolio-snapshots/opi-brochure-interior.jpg" title="OPI Brochure- Interior">
 						<img src="media/img/portfolio-snapshots/tn-opibrochure-interior.jpg" alt="OPI Brochure Interior" />
 						<span class="caption">OPI Brochure- Interior</span> </a> </li>   				
-				<li> <a class="gallery" href="media/img/portfolio-snapshots/tn-2009wbinvite.png" title= "2009 Winter Brunch Invitation">
+				<li> <a class="gallery" href="media/img/portfolio-snapshots/tn-2009wbinvite.png" title= "Winter Brunch Invitation">
 						<img src="media/img/portfolio-snapshots/tn-2009wbinvite.png"   alt="Winter Brunch Invitation"/> 
-						<span class="caption">2009 Winter Brunch Invitation</span> </a> </li>
+						<span class="caption">Winter Brunch Invitation</span> </a> </li>
    				<li> <a class="gallery" href="media/img/portfolio-snapshots/reportingmanual.jpg"    title="Time Effort Reporting Manual">
 						<img src="media/img/portfolio-snapshots/tn-reportingmanual.jpg"    alt="Time Effort Reporting Manual"/>
 					<span class="caption">Time Effort Reporting Manual</span> </a> </li>
@@ -78,11 +78,14 @@
       			<h2><a href="digital.html">Digital</a></h2>
 	    		<ul class="gallery">
         			<li> <a class="gallery" href="media/img/portfolio-snapshots/2011holidaycard.png"  title="Holiday Card"> 
-					<img src="media/img/portfolio-snapshots/tn-2011holidaycard.png"  alt="Holiday Card" /> </a></li>
+					<img src="media/img/portfolio-snapshots/tn-2011holidaycard.png"  alt="Holiday Card" />
+					<span class="caption">Holiday Card</span> </a></li>
 	 			<li> <a class="gallery" href="media/img/portfolio-snapshots/june242012ward44.jpg"   title="June 24, 2012 Project">
-					<img src="media/img/portfolio-snapshots/tn-june242012ward44.jpg"   alt="June 24, 2012" /> </a> </li>
-				<li> <a class="gallery" href="media/img/portfolio-snapshots/2012holidaycard.jpg"    title="Holiday Card 2012" class="wide-img">
-					<img src="media/img/portfolio-snapshots/tn-2012holidaycard.jpg"    alt="Holiday Card" class="wide-img"/> </li>
+					<img src="media/img/portfolio-snapshots/tn-june242012ward44.jpg"   alt="June 24, 2012" />
+					<span class="caption">June 24, 2012 Project</span> </a> </li>
+				<li> <a class="gallery" href="media/img/portfolio-snapshots/2012holidaycard.jpg"    title="Holiday Card">
+					<img src="media/img/portfolio-snapshots/tn-2012holidaycard.jpg"    alt="Holiday Card" class="wide-img"/>
+					<span class="caption">Holiday Card</span> </li>
 			</ul>
   		</div> 		<!--end short-digital-->
 	</div> 		<!--end content-body-->
