--- a/index.html
+++ b/index.html
@@ -62,21 +62,18 @@
 						<img src="media/img/portfolio-snapshots/tn-opibrochure-interior.jpg" alt="OPI Brochure Interior" />
 						<span class="caption">OPI Brochure- Interior</span> </a> </li>   				
 				<li> <a class="gallery" href="media/img/portfolio-snapshots/tn-2009wbinvite.png" title= "Winter Brunch Invitation">
-						<img src="media/img/portfolio-snapshots/tn-2009wbinvite.png"   alt="Winter Brunch Invitation"/> 
+						<img src="media/img/portfolio-snapshots/tn-2009wbinvite.png"   alt="Winter Brunch Invitation" /> 
 						<span class="caption">Winter Brunch Invitation</span> </a> </li>
    				<li> <a class="gallery" href="media/img/portfolio-snapshots/reportingmanual.jpg"    title="Time Effort Reporting Manual">
-						<img src="media/img/portfolio-snapshots/tn-reportingmanual.jpg"    alt="Time Effort Reporting Manual"/>
+						<img src="media/img/portfolio-snapshots/tn-reportingmanual.jpg"    alt="Time Effort Reporting Manual" />
 					<span class="caption">Time Effort Reporting Manual</span> </a> </li>
 			</ul>
 
-				<ul>
-					
-</ul>
 		</div> <!--end short-print-->
 
 		<div id="short-digital">
       			<h2><a href="digital.html">Digital</a></h2>
-	    		<ul class="gallery">
+	    		<ul>
         			<li> <a class="gallery" href="media/img/portfolio-snapshots/2011holidaycard.png"  title="Holiday Card"> 
 					<img src="media/img/portfolio-snapshots/tn-2011holidaycard.png"  alt="Holiday Card" />
 					<span class="caption">Holiday Card</span> </a></li>
@@ -84,8 +81,8 @@
 					<img src="media/img/portfolio-snapshots/tn-june242012ward44.jpg"   alt="June 24, 2012" />
 					<span class="caption">June 24, 2012 Project</span> </a> </li>
 				<li> <a class="gallery" href="media/img/portfolio-snapshots/2012holidaycard.jpg"    title="Holiday Card">
-					<img src="media/img/portfolio-snapshots/tn-2012holidaycard.jpg"    alt="Holiday Card" class="wide-img"/>
-					<span class="caption">Holiday Card</span> </li>
+					<img src="media/img/portfolio-snapshots/tn-2012holidaycard.jpg"    alt="Holiday Card" />
+					<span class="caption">Holiday Card</span></a>  </li>
 			</ul>
   		</div> 		<!--end short-digital-->
 	</div> 		<!--end content-body-->
