--- a/print.html
+++ b/print.html
@@ -53,7 +53,7 @@
             <li> <a class="gallery print-group" href="media/img/portfolio-snapshots/2008wbinvite.png"   title="Winter Brunch Invitation">
                   <img src="media/img/portfolio-snapshots/tn-2008wbinvite.png"   alt="Winter Brunch Invitation"/>
                    <span class="caption">Winter Brunch Invitation</span> </a></li>
-            <li><a class="gallery print-group" href="media/img/portfolio-snapshots/2009wbinvite.png"   title="Winter Brunch Invitation"/>
+            <li><a class="gallery print-group" href="media/img/portfolio-snapshots/2009wbinvite.png"   title="Winter Brunch Invitation">
                  <img src="media/img/portfolio-snapshots/tn-2009wbinvite.png"   alt="Winter Brunch Invitation"/>
                    <span class="caption">Winter Brunch Invitation</span></a></li>
             <li><a class="gallery print-group" href="media/img/portfolio-snapshots/reportingmanual.jpg"    title="Time Effort Reporting Manual">
