fixed image and colorbox issues

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
     			<h2><a href="print.html">Print</a></h2>
 	
 			<ul> 
-				<li> <a class="gallery" href="media/img/portfolio-snapshots/opi-brochure-interior.jpg" title="OPI Brochure- Interior">
+				<li> <a class="gallery print-group" href="media/img/portfolio-snapshots/opi-brochure-interior.jpg" title="OPI Brochure- Interior">
 						<img src="media/img/portfolio-snapshots/tn-opibrochure-interior.jpg" alt="OPI Brochure Interior" />
 						<span class="caption">OPI Brochure- Interior</span> </a> </li>   				
-				<li> <a class="gallery" href="media/img/portfolio-snapshots/tn-2009wbinvite.png" title= "Winter Brunch Invitation">
+				<li> <a class="gallery print-group" href="media/img/portfolio-snapshots/tn-2009wbinvite.png" title= "Winter Brunch Invitation">
 						<img src="media/img/portfolio-snapshots/tn-2009wbinvite.png"   alt="Winter Brunch Invitation" /> 
 						<span class="caption">Winter Brunch Invitation</span> </a> </li>
-   				<li> <a class="gallery" href="media/img/portfolio-snapshots/reportingmanual.jpg"    title="Time Effort Reporting Manual">
+   				<li> <a class="gallery print-group" href="media/img/portfolio-snapshots/reportingmanual.jpg"    title="Time Effort Reporting Manual">
 						<img src="media/img/portfolio-snapshots/tn-reportingmanual.jpg"    alt="Time Effort Reporting Manual" />
 					<span class="caption">Time Effort Reporting Manual</span> </a> </li>
 			</ul>
@@ -74,13 +74,13 @@
 		<div id="short-digital">
       			<h2><a href="digital.html">Digital</a></h2>
 	    		<ul>
-        			<li> <a class="gallery" href="media/img/portfolio-snapshots/2011holidaycard.png"  title="Holiday Card"> 
+        			<li> <a class="gallery digital-group" href="media/img/portfolio-snapshots/2011holidaycard.jpg"  title="Holiday Card"> 
 					<img src="media/img/portfolio-snapshots/tn-2011holidaycard.png"  alt="Holiday Card" />
 					<span class="caption">Holiday Card</span> </a></li>
-	 			<li> <a class="gallery" href="media/img/portfolio-snapshots/june242012ward44.jpg"   title="June 24, 2012 Project">
+	 			<li> <a class="gallery digital-group" href="media/img/portfolio-snapshots/june242012ward44.jpg"   title="June 24, 2012 Project">
 					<img src="media/img/portfolio-snapshots/tn-june242012ward44.jpg"   alt="June 24, 2012" />
 					<span class="caption">June 24, 2012 Project</span> </a> </li>
-				<li> <a class="gallery" href="media/img/portfolio-snapshots/2012holidaycard.jpg"    title="Holiday Card">
+				<li> <a class="gallery digital-group" href="media/img/portfolio-snapshots/2012holidaycard.jpg"    title="Holiday Card">
 					<img src="media/img/portfolio-snapshots/tn-2012holidaycard.jpg"    alt="Holiday Card" />
 					<span class="caption">Holiday Card</span></a>  </li>
 			</ul>
@@ -103,6 +103,8 @@
 </div> 	<!--end page-->
 <script>
 	jQuery('a.gallery').colorbox();
+ 	$(".print-group").colorbox({rel:"print-group"});
+ 	$(".digital-group").colorbox({rel:"digital-group"});
 </script>
 </body>
 
