--- a/print.html
+++ b/print.html
@@ -59,7 +59,7 @@
             <li><a class="gallery print-group" href="media/img/portfolio-snapshots/reportingmanual.jpg"    title="Time Effort Reporting Manual">
                 <img src="media/img/portfolio-snapshots/tn-reportingmanual.jpg"    alt="Time Effort Reporting Manual"/>
                    <span class="caption">Time Effort Reporting Manual</span></a></li>
-            <li><a class="gallery print-group" href="media/img/portfolio-snapshots/2010wbinvite.png"  title="Winter Brunch Invitation">
+            <li><a class="gallery print-group" href="media/img/portfolio-snapshots/2010wbinvite.jpg"  title="Winter Brunch Invitation">
                 <img src="media/img/portfolio-snapshots/tn-2010wbinvite.png"  alt="Winter Brunch Invitation"/>
                    <span class="caption">Winter Brunch Invitation</span></a></li>
             <li><a class="gallery print-group" href="media/img/portfolio-snapshots/globaliqposter-sa1.jpg"   title="Global IQ Poster">
